src/objects/BGCK__Comment_Type__c.object
<CustomObject>
    <fields>
        <fullName>BGCK__Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BGCK__Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>BGCK__Question__c</referenceTo>
        <relationshipLabel>Comment Types</relationshipLabel>
        <relationshipName>Comment_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Track_No__c</fullName>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Comment Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comment Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>